Getter or setter method named "prototype" or "constrcutor" should throw SyntaxError https://bugs.webkit.org/show_bug.cgi?id=144243

Reviewed by Darin Adler.

Source/JavaScriptCore:

Fixed the bug by adding explicit checks in parseGetterSetter when we're parsing class methods.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseGetterSetter):

LayoutTests:

Added tests cases to both tests. Also added test cases missing from expression tests.

* js/class-syntax-declaration-expected.txt:
* js/class-syntax-expression-expected.txt:
* js/script-tests/class-syntax-declaration.js:
* js/script-tests/class-syntax-expression.js:


Canonical link: https://commits.webkit.org/162246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183382 268f45cc-cd09-0410-ab3c-d52691b4dbfc